# KOACH

./: LICENSE  README.md  pyproject.toml
f1_coach/: __main__.py
f1_coach/application/: __init__.py  coaching_engine.py  prompt_builder.py  telemetry_analyzer.py
f1_coach/application/f125/: __init__.py  coaching_engine.py  prompt_builder.py  telemetry_analyzer.py
f1_coach/application/fsae/: channel_decoder.py  mapping_profile_applier.py
f1_coach/domain/models/: __init__.py  car_setup.py  enums.py  lap.py  profile.py  session.py  telemetry_point.py
f1_coach/domain/ports/: __init__.py  ai_adapter.py  car_setup_repository.py  lap_repository.py  profile_repository.py  session_repository.py
f1_coach/infrastructure/ai/: __init__.py  adapter_factory.py  anthropic_adapter.py  gemini_adapter.py  groq_adapter.py
f1_coach/infrastructure/can/: can_log_reader.py
f1_coach/infrastructure/f125_udp/: packets.py  session_manager.py  telemetry_mapper.py  telemetry_receiver.py
f1_coach/infrastructure/fsae_can/: can_log_reader.py
f1_coach/infrastructure/logging/: logger.py
f1_coach/infrastructure/security/: credential_store.py
f1_coach/infrastructure/storage/: f125_parquet_writer.py  (+1 more)
f1_coach/presentation/: __init__.py  ana_sayfa_page.py  app.py  ayarlar_page.py  banner_widget.py  canli_session_page.py  confirm_dialog.py  f1_25_landing_page.py  lap_analizi_page.py  main_window.py  no_scroll_widgets.py  placeholder_pages.py  profil_page.py  resource_path.py  secondary_panel.py  session_gecmisi_page.py  sidebar.py  text_prompt_dialog.py  theme.py  theme_manager.py
(+64 files in other folders)
