[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koach"
version = "0.1.0"
description = "F1 25 telemetry analysis and AI coaching desktop application"
requires-python = ">=3.11"
dependencies = [
    # UI
    "PyQt6>=6.7.0",
    "PyQt6-WebEngine>=6.7.0",
    # Data
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    # Visualization
    "plotly>=5.22.0",
    # AI providers
    "groq>=0.9.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "keyring>=25.0.0"
]

[tool.setuptools.package-data]
"f1_coach.presentation" = ["assets/*.png"]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "pytest-qt>=4.4.0",
    "pyinstaller>=6.10.0",
]

[project.scripts]
koach = "f1_coach.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["f1_coach*"]

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests/"]

# --- ruff ---
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["f1_coach"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
